# Z80Emu

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build_instructions.txt  main.cpp  prog.hex.old  z80.h
Z80/: z80.cpp
Z80/iManager/: iManager.cpp  iManager.h
Z80/iManager/iSet/: iSet.cpp  iSet.h
Z80/iSet/: iSet.cpp  iSet.h
Z80/iSet/INCDECADDSUB/: incdecaddsub.h
Z80/log/: log.h
Z80/memoryManager/: memoryManager.cpp  memoryManager.h
examples/: 16bitmemtest.hex  countDown.hex  ioswap.hex
include/: iManager.h  iSet.h  instruction.h  iomanager.h  log.h  memoryManager.h  z80emu.h  z80emuinstruction.h
include/cpufunctions/: arithmetic.h  bit.h  cpuctl.h  incdecaddsub.h  rotate.h
include/instructions/: bitIS.h  extIS.h  ixcb.h  iycb.h  mainIs.h
libz80/: CMakeLists.txt
libz80/Z80cpp/: z80_getFromPC.cpp
libz80/cpu/iomanager/: iomanager.cpp
libz80/cpufunctions/arithmetic/: arithmetic.cpp
libz80/cpufunctions/bit/: bit.cpp
libz80/cpufunctions/incdecaddsub/: add.cpp  inc.cpp
libz80/instructions/BIT/: bitIS.cpp  bitIS_exec.cpp  bitIS_fetch.cpp
libz80/instructions/EXT/: extIS_exec.cpp
libz80/instructions/IXCB/: ixcb_exec.cpp
libz80/instructions/IYCB/: iycb.cpp
libz80emu/: CMakeLists.txt
libz80emu/Z80cpp/: z80.cpp  z80_getFromPC.cpp  z80_registers.cpp  z80_tools.cpp
libz80emu/iManager/: iManager.cpp
libz80emu/log/: log.cpp  logfunction.cpp
libz80emu/memoryManager/: memoryManager.cpp  memoryManager_get.cpp  memoryManager_loadProgFromFile.cpp
src/: main.cpp  z80.h
src/Z80/: loglevelInfo.txt  z80.cpp  z80.h
(+117 files in other folders)
